--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Cute+Font&display=swap" rel="stylesheet"> 
+
     <!-- add link to your javascript. be sure it includes "defer" -->
     <script type="text/javascript" src="airtable.browser.js" defer></script>
     <script type="text/javascript" src="script.js" defer></script>
@@ -19,14 +21,13 @@
 <body>
     <div class="container">
         <div class="filter">
-            Filter By:
-            <span class="indie">Indie</span>
-            <span class="pop">Pop</span>
-            <span class="shoegaze">Shoegaze</span>
-            <span class="js-reset">Reset All</span>
+            <span class="indie"></span>
+            <span class="pop"></span>
+            <span class="shoegaze"></span>
+            <span class="js-reset"></span>
         </div>
     </div>
-
+    
 
 </body>
 
